Ajouter l'etat Recpaputilatif

--- a/ParcAuto/Form1.resx
+++ b/ParcAuto/Form1.resx
@@ -428,6 +428,21 @@
         Vl7RL9v+X9LrvQMv0/WNqXwkiQAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="btnEtatRecap.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcMEwUTE5aZJQAAAe9JREFU
+        WEftl71OYzEQhVOxPVQ00CDxEiBYyjwGzwAFokEroNxieRugAtFTU9ACEhT8FKAtwnesmTAOTnRtIi3F
+        ftLRnJnM2M7FQrm9b8FgMFhEp+gNTROtd4IWbKsyNGjzHTRjpWqY3UN/0ZGVVJtBu+jYSmVo0EmbNxfM
+        6wC/0SXasbLqP9CbpWVoGJiVP0Qv6MBKqq2jLfPaaBTVXPPoGm2mYcAP1y8SG7DPqI+eLF9Bd2gjNYyB
+        z/Un/GN+Gd2gvuVVBzhAOsQ++rQ5ftwTWEJXKfvg0Wa6H8ChtIpu0cRvPglf1+NYRhtItbm++U+U3Qli
+        8QmkwRH0QYxjiQ3Y4eaWZ3eiBmaaDrCN1ixVPrwTVsqgridU+w9M/R/rqWK2Glts1tJO0D+HXi398gH8
+        MV/Id+A8ziViIi+iL5GawX2sTaLYnyWV+GxcY7TmUZRqnxpE9CVSM7iPtUkU+7OkEp8lnMt34CzOJWIi
+        L6IvkZoh+hqyudZFhM8SHuThvmNePoC8iL5Eagb3rTGRJZX4LOFeXrFjXj6AvIi+RGqG6GvI5loXET5L
+        +H8HpnMHammdzeZaFxE+S5jOHajFZ1tjAt/8YuILEb50B/T+pleo6kMwo8PPWdoJ9aPsF5FeTo9R7W+7
+        Vl7RL9v+X9LrvQMv0/WNqXwkiQAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAMgAAABiCAIAAACavQtBAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
