Ajouter une Direction

--- a/ParcAuto/Forms/EtatRecap.resx
+++ b/ParcAuto/Forms/EtatRecap.resx
@@ -492,4 +492,19 @@
         AX8D/wHAJAAE/wH+AQABDwT/AcAkAAv/AcAkAAv/AcAkAAv/AcAkAAv/AcAkAAs=
 </value>
   </data>
+  <data name="btnAjouter.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcJDjsM/HtPvAAAAdxJREFU
+        WEfNl09OwkAUh4mJohFcmRCXKjtdeBmIXoMjmBC8gYA34BS68O/GPzfQHbpUE3SD3699jRFL25m20S/5
+        kjKdN+/RdqbTSlam02kdD/AEb/AZP00dX+MQ97FuYflhsA08xnfMivqq0KYN4w7BK3iIb+iLrs4RVm3Y
+        bBDQxAcsinNs2PDJ0HEPx4oqmCfctTTx0EH/vIzkEY8YfyU4sYy36lUyF/j7maBRD5wrKvguPHSiZ2lD
+        aNBUc33alXjBvFeDAx+4bemDAjTPXRlZuOJHYZMTwyh4DV0WmYi8BeiK1xSs5dWHvAWItoK1ZPpQRAED
+        BevF4kMRBVwq+CU8noummhLM2rH8GqMzcy4ybYqOFawpMY9gqlkeZxSLSVN08i8KSLsFGiDu8ma5BWkL
+        VHAL/vwh1DbKhyIK6CtYezgfiiigpeAavgY/3chbQLgU2wA+q2HeAgYWHgygnZA2kC7keR1PcNPSh9Cg
+        3asrSuyaXHQt7Tc0LuJZcLpctEOO36ZzooHavZbF/E1pBB12sYwilHzH0iRDx3U8VVRBZP8wiSCgij1M
+        elmlodguLtmw7hC8hVquXXbNWtgG+HOq5YHBtGK2sY9XqC8o/UOpY7Vpd93CVQtLoVL5AqLjM/b3L63f
+        AAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
