--- a/ParcAuto/Forms/EtatRecap.resx
+++ b/ParcAuto/Forms/EtatRecap.resx
@@ -351,7 +351,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAB6
-        GQAAAk1TRnQBSQFMAwEBAAEgAQABIAEAAVoBAAFaAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMA
+        GQAAAk1TRnQBSQFMAwEBAAEoAQABKAEAAVoBAAFaAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMA
         AWgBAQIAAVoDAAEBAQABCAUAAZABfhgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQABwAHc
         AcABAAHwAcoBpgEAATMFAAEzAQABMwEAATMBAAIzAgADFgEAAxwBAAMiAQADKQEAA1UBAANNAQADQgEA
         AzkBAAGAAXwB/wEAAlAB/wEAAZMBAAHWAQAB/wHsAcwBAAHGAdYB7wEAAdYC5wEAAZABqQGtAgAB/wEz
@@ -475,6 +475,23 @@
         3asrSuyaXHQt7Tc0LuJZcLpctEOO36ZzooHavZbF/E1pBB12sYwilHzH0iRDx3U8VVRBZP8wiSCgij1M
         elmlodguLtmw7hC8hVquXXbNWtgG+HOq5YHBtGK2sY9XqC8o/UOpY7Vpd93CVQtLoVL5AqLjM/b3L63f
         AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnRefresh.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcJDTslvI9piQAAAmNJREFU
+        WEftl81LFVEYhy8lfuSiNhrZqhvWKv0nWkkgGEFIUUHQInRRBNHKXYQYGtWiFka1868QNVpES/sgIqIP
+        kCCy70Vcn98576hzZ6Y5Z7y7euAB5z3v+57hembmnFoojUajF0fxDj7Bt/gdv+FLXMBpPIztVrZ1aDaA
+        s/gbQ/mCk9hjbVIQr+NdHLZQFga78Dr+wap8xQlss7bqewDfoVi1cBoGlLTsUlrDPO7Gg/hBgQSbcgNi
+        h/CjG20t7zHT16b1cL0fP7mRYlbwPl7AE3gKL+FD1FgUNrWbvAO1uot4jsdxu5VkYGyb5TzDIKzUFV/z
+        oVymsMNSS1Eu3lZhGUnBXvzpIlnGXVIk1PXjZ9fhLyTJt/xlhmmXEAl1mlyLrpTk51p1V2leY6f1DIaa
+        4MmFCo74PzOMWc8oqAtegEIFets1o0ex23pGQV3MDSyrYA8ea3LA+kVDbQ+ObOpVpHJyvxX/+cdgIWin
+        E7poeq0sGmoHN/WSR3Fn/GNTAeq6Me8re06DMVS9gTFfnqEecwN6vfZbz2Co6US91pt5miSEUGlyQd1N
+        1yHL+SShDO1wq06uXVMe2tL7/YW/LuUe7nAFAZCrn31GhQWcsdTgGxBv8CwWHjoYa0MdXl5gEXOW7rFg
+        DPqXzOEVPI0n8SI+wLINrW5sl03t8fEUudvnFqBzRp9Nu4EfW0cnFu1otEd8pECLWML8tygDyXbMTW5h
+        xdvxKv7AqvzCy1i4lddEw6iDYt1CKYj3oZ5lnYRD0ZlQT8E+a7N1aKbD6hBqv7+IrzA5nusJeYw3UB+t
+        9EIrpFZbAz9+vacp2RmKAAAAAElFTkSuQmCC
 </value>
   </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
