--- a/ParcAuto/Form1.resx
+++ b/ParcAuto/Form1.resx
@@ -123,38 +123,24 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="btnNbCourriers.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcJDzMkANUHeQAAAoVJREFU
-        WEe1lr1rFEEchi+JBk1E1CaaSiFFghAxNpai2GttiJjYWwQURIIIiaRQk1gYGwVBQcHSRls/42fjH6CC
-        ICh+Yun5vLPv7q1nbrNL5h54YGd+H3N3zM1srSr1er0Lj+ND/GX1PIFdTmsPLNCLD7AV97HX6fGh+c2w
-        TDE3nB4XGu/CP2GJYpQz7LJ40PRMaF+O0y6LB00Xk96luOKyeNB0JuldimmXxYOmB5PepTjgsnjQtAOX
-        QvtinmCHy+JC4x34Qau04D1ud3p7YIE+vI6/MUXP17DPae2HxXQq6myQPZ6OC43X4jl8ii8qqhrVrnG7
-        6lB8HlfLjNtVg8Ie/BparI5vWP2CokhXbiwm3LY8FD1PaqOw5LbloGAkqVuWt3gS92K/1fMpVKwVI26/
-        MiRfTWr+4TuewE6nKW+99FBjnZZj+AWbWXRaMSRuwB+hpIE24x7H9Y3nUKdeyju8hP3OGcbPmOcnblS8
-        EJJGQ3oDvQUNOjaEzY3zKDbk3EFsfoM6olghJB1LcjOmHAowHsDl3ow0N+C0AOOpEGlw1KHWkKQj9llI
-        T/iIGo86Pq5JeInajPKVJmDcOfoVVaPaFI3LHdkkrsNbqspxyLF7eBuzV3A94x3FPD6Mee5itfuCAu3o
-        s6oGbSDteM3pfN+KWvQyLvh5GyqmHH2BdCPPY/bPqQzF+lvNepjBnG7BlP/egpmbxTEP40DDSdQZkf4C
-        F/ECdqJ+AcUmnR4PmnbjTkxfQrQHsmtWz6g9IJSj3G6H40DDx+qe4zWGkxDfaCLHI5fFg6a6H7QZ82yy
-        ebT5drssLjTej5+0imn+AIrtc3p7YIEtqDcl3XzpB9DzNG52Wklqtb/ZlZEdR2NsHwAAAABJRU5ErkJg
-        gg==
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5ggfEzEqN0WNegAAARNJREFU
+        OE+1k0tOwzAQQLOETTkCghVlDwjRwwCH4HcTQIBUKPehH7bAIWAH5r16rKZpsoMnPcmZeMb2xKn+hZTS
+        Ll7iQ+i4H6+7YdIGPuMPNjE2wl5MX4YXJk9QPvEaj8ObiMkYV4sQdGWZ4iau41HoeAtnKI+RliHgmd2i
+        q5h8gB9YeMd9tMgXOnfREx6uUNy2q9WTCxZZw9v5U0oXkT4vcJ9j6QQHediKxznNw3QX6SsFnNTFIbYW
+        aB7B7TZ5w84j9LE00UbZsHoRk/dwG23iN+5EeoaAl0T8VBZxtfIZHZv8ijKMtAUEe+glEVdxq/ZEHRuT
+        F+y8jRZ5wrar7LaH2J5ch0n25BzLz3SGy2f+G6rqF0Q3UpuMiUWjAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="btnLstCourriers.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcJDzMkANUHeQAAAoVJREFU
-        WEe1lr1rFEEchi+JBk1E1CaaSiFFghAxNpai2GttiJjYWwQURIIIiaRQk1gYGwVBQcHSRls/42fjH6CC
-        ICh+Yun5vLPv7q1nbrNL5h54YGd+H3N3zM1srSr1er0Lj+ND/GX1PIFdTmsPLNCLD7AV97HX6fGh+c2w
-        TDE3nB4XGu/CP2GJYpQz7LJ40PRMaF+O0y6LB00Xk96luOKyeNB0JuldimmXxYOmB5PepTjgsnjQtAOX
-        QvtinmCHy+JC4x34Qau04D1ud3p7YIE+vI6/MUXP17DPae2HxXQq6myQPZ6OC43X4jl8ii8qqhrVrnG7
-        6lB8HlfLjNtVg8Ie/BparI5vWP2CokhXbiwm3LY8FD1PaqOw5LbloGAkqVuWt3gS92K/1fMpVKwVI26/
-        MiRfTWr+4TuewE6nKW+99FBjnZZj+AWbWXRaMSRuwB+hpIE24x7H9Y3nUKdeyju8hP3OGcbPmOcnblS8
-        EJJGQ3oDvQUNOjaEzY3zKDbk3EFsfoM6olghJB1LcjOmHAowHsDl3ow0N+C0AOOpEGlw1KHWkKQj9llI
-        T/iIGo86Pq5JeInajPKVJmDcOfoVVaPaFI3LHdkkrsNbqspxyLF7eBuzV3A94x3FPD6Mee5itfuCAu3o
-        s6oGbSDteM3pfN+KWvQyLvh5GyqmHH2BdCPPY/bPqQzF+lvNepjBnG7BlP/egpmbxTEP40DDSdQZkf4C
-        F/ECdqJ+AcUmnR4PmnbjTkxfQrQHsmtWz6g9IJSj3G6H40DDx+qe4zWGkxDfaCLHI5fFg6a6H7QZ82yy
-        ebT5drssLjTej5+0imn+AIrtc3p7YIEtqDcl3XzpB9DzNG52Wklqtb/ZlZEdR2NsHwAAAABJRU5ErkJg
-        gg==
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5ggfEzEqN0WNegAAARNJREFU
+        OE+1k0tOwzAQQLOETTkCghVlDwjRwwCH4HcTQIBUKPehH7bAIWAH5r16rKZpsoMnPcmZeMb2xKn+hZTS
+        Ll7iQ+i4H6+7YdIGPuMPNjE2wl5MX4YXJk9QPvEaj8ObiMkYV4sQdGWZ4iau41HoeAtnKI+RliHgmd2i
+        q5h8gB9YeMd9tMgXOnfREx6uUNy2q9WTCxZZw9v5U0oXkT4vcJ9j6QQHediKxznNw3QX6SsFnNTFIbYW
+        aB7B7TZ5w84j9LE00UbZsHoRk/dwG23iN+5EeoaAl0T8VBZxtfIZHZv8ijKMtAUEe+glEVdxq/ZEHRuT
+        F+y8jRZ5wrar7LaH2J5ch0n25BzLz3SGy2f+G6rqF0Q3UpuMiUWjAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="arrowsuiviUp.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -178,55 +164,59 @@
   <data name="btnSuivi.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcJDzMkANUHeQAAAoVJREFU
-        WEe1lr1rFEEchi+JBk1E1CaaSiFFghAxNpai2GttiJjYWwQURIIIiaRQk1gYGwVBQcHSRls/42fjH6CC
-        ICh+Yun5vLPv7q1nbrNL5h54YGd+H3N3zM1srSr1er0Lj+ND/GX1PIFdTmsPLNCLD7AV97HX6fGh+c2w
-        TDE3nB4XGu/CP2GJYpQz7LJ40PRMaF+O0y6LB00Xk96luOKyeNB0JuldimmXxYOmB5PepTjgsnjQtAOX
-        QvtinmCHy+JC4x34Qau04D1ud3p7YIE+vI6/MUXP17DPae2HxXQq6myQPZ6OC43X4jl8ii8qqhrVrnG7
-        6lB8HlfLjNtVg8Ie/BparI5vWP2CokhXbiwm3LY8FD1PaqOw5LbloGAkqVuWt3gS92K/1fMpVKwVI26/
-        MiRfTWr+4TuewE6nKW+99FBjnZZj+AWbWXRaMSRuwB+hpIE24x7H9Y3nUKdeyju8hP3OGcbPmOcnblS8
-        EJJGQ3oDvQUNOjaEzY3zKDbk3EFsfoM6olghJB1LcjOmHAowHsDl3ow0N+C0AOOpEGlw1KHWkKQj9llI
-        T/iIGo86Pq5JeInajPKVJmDcOfoVVaPaFI3LHdkkrsNbqspxyLF7eBuzV3A94x3FPD6Mee5itfuCAu3o
-        s6oGbSDteM3pfN+KWvQyLvh5GyqmHH2BdCPPY/bPqQzF+lvNepjBnG7BlP/egpmbxTEP40DDSdQZkf4C
-        F/ECdqJ+AcUmnR4PmnbjTkxfQrQHsmtWz6g9IJSj3G6H40DDx+qe4zWGkxDfaCLHI5fFg6a6H7QZ82yy
-        ebT5drssLjTej5+0imn+AIrtc3p7YIEtqDcl3XzpB9DzNG52Wklqtb/ZlZEdR2NsHwAAAABJRU5ErkJg
-        gg==
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5ggfEyg3z0NIuwAAAVRJREFU
+        WEftllFOwkAURRtWoBECm3APfvivK2ALIpgo6l50NyZiomiie+GDeu/Le2XSzLRDmI4f9iQXygvknhaY
+        TtHTQ8qyHCCnyHmmsGug9SJwhLwiuXhHTqz80pFYIV1TleP5gg8bZJlJ4gOx8iWy4YHx2LEEy4facSMT
+        4AqQh44k3PKFTJS6ADGJY+RNJocRLCc+AXKfSGKNWPlcJjVCAuRQidZy0iRA7N8xQj5lEsc3MtHPXssk
+        QJsA2VfiB4kqJzEC5C5S4gsZ6XtnMmlhLwGC45BEdeYEx8kE3LOfOsc8W8O97FMk+iq0Cfi+/1udjZEX
+        zVhnLNwiSX6ETT8+kXDB7AphuRElERKwNWCIcCXz8YScaZ458OCugtELUapV0GhckOoCqe8DRtTNqKs7
+        oeGV4IvcGxKTqDYkubdklNhtyTKXG7tNKcGLv92W9/xjiuIXTXKP2JDpkLYAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="btnMissions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcJDzMkANUHeQAAAoVJREFU
-        WEe1lr1rFEEchi+JBk1E1CaaSiFFghAxNpai2GttiJjYWwQURIIIiaRQk1gYGwVBQcHSRls/42fjH6CC
-        ICh+Yun5vLPv7q1nbrNL5h54YGd+H3N3zM1srSr1er0Lj+ND/GX1PIFdTmsPLNCLD7AV97HX6fGh+c2w
-        TDE3nB4XGu/CP2GJYpQz7LJ40PRMaF+O0y6LB00Xk96luOKyeNB0JuldimmXxYOmB5PepTjgsnjQtAOX
-        QvtinmCHy+JC4x34Qau04D1ud3p7YIE+vI6/MUXP17DPae2HxXQq6myQPZ6OC43X4jl8ii8qqhrVrnG7
-        6lB8HlfLjNtVg8Ie/BparI5vWP2CokhXbiwm3LY8FD1PaqOw5LbloGAkqVuWt3gS92K/1fMpVKwVI26/
-        MiRfTWr+4TuewE6nKW+99FBjnZZj+AWbWXRaMSRuwB+hpIE24x7H9Y3nUKdeyju8hP3OGcbPmOcnblS8
-        EJJGQ3oDvQUNOjaEzY3zKDbk3EFsfoM6olghJB1LcjOmHAowHsDl3ow0N+C0AOOpEGlw1KHWkKQj9llI
-        T/iIGo86Pq5JeInajPKVJmDcOfoVVaPaFI3LHdkkrsNbqspxyLF7eBuzV3A94x3FPD6Mee5itfuCAu3o
-        s6oGbSDteM3pfN+KWvQyLvh5GyqmHH2BdCPPY/bPqQzF+lvNepjBnG7BlP/egpmbxTEP40DDSdQZkf4C
-        F/ECdqJ+AcUmnR4PmnbjTkxfQrQHsmtWz6g9IJSj3G6H40DDx+qe4zWGkxDfaCLHI5fFg6a6H7QZ82yy
-        ebT5drssLjTej5+0imn+AIrtc3p7YIEtqDcl3XzpB9DzNG52Wklqtb/ZlZEdR2NsHwAAAABJRU5ErkJg
-        gg==
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5ggfEycI/r15SQAABM1JREFU
+        WEell2moVVUYhq8WaE6ZQVRGZQNpmmY2aUrQIIEVhmREhBQU+KdMmiiCwAqzuhFZVkQ0CZHRQPWnbC4b
+        aBAiIbKSguYfoc3T6XnWefdun3uu13vphYezvnetvdfaaz49g1Wr1RoJZ8E98A58B38G02/DGlgEw/LY
+        /xcvOwBuhh9A/QMfwbPwYDC9CcxT8/J4EfFoOBUG3zAK7wxXwq+gXoOzYfcU6ZJ5cCzUFZEeC6+Dmh57
+        YFHwIHi/PNJqvQAzkzUk8Zxf/pIviY5J1vZFoSPAMfXLl0G/3YY/DqbA9P7K4DW//I38LoFZMA2634t5
+        MFj5T9AxjgrP7r0TvoSmlqdIEXGzcj/CoeurBSneFsYo+BB+gRNjFxFPgidA/Q2+/Ea4GC6AiSlq2eHg
+        fFHL4rmCzoE3NZHPjy4PVMK4qWS1WktjFREfD9/DH7Aa9k5WvyJ/MqjeWEXE9oSy8rGx28Jw0rmeX4Hh
+        sfXnwm/wFRwde0BR7lBQF8VqVu5c6KxcYd4LruFpsfT2gW/hG9gvdhGx3ex8cFIdFbuIuGrAI3AhVD3b
+        /eUKcww46V6MVUT8EDjec2IVEbvTfQaV1ierath9xe2Uc6KunPQwOM5fgzNBLU6+3lSw8vtjFRFfDWoL
+        XAKzYVTympX76w5aUQ+rIp4DaqHBXWD3j0++3gpQk2PpLQDLPQcdXUnsF/keZeUdFfYV+XuWkq3WrQZv
+        webkFRF/AJsSFhFvBOfDrrGKiIdUeSXKuZdsMOESezx+EfHP8EBC4wNBrYhVRDyoyvGd0NfATrH0noEt
+        Jlzfa+Mbjwe1MpbeKW2LMWuI+Pq2/V/l/Lr/r4d6dZB2s1IzYumtg20m+jbAVaFWxdI7uW21FsUqIj4f
+        roP6y0k7MdWSWHpOWHVILD0bsNWEQ/BY/CLibfBwQmO70Al4S6ztijKXgmr2QLUXjIul9zSUIfB2szF+
+        EbET8/OERcRuJD/CXrG6RJ4n5BfwCTTvBBv0ExalXJmEd4PbcHOjuArUrFh6rl3LvQtdjcBz7jj29tTp
+        sfUngnvK6lh6e4DqNVjcTndsRJ5+v8OTsYqIzwMbYU/0grviQnAyeoxb+eUpXkTsPVG/PktInwtqkcEI
+        8OGXk19EfDuo+msUsZPsVfClTb0H81OsiNiyNnhdrCJih9N5NqYyvHSq+s5GegJ8Clvh8Ni18Ozak8Al
+        un/sWnrwNfhx+8bWnwFqTaxi2uVeRBzD5uTxTLC7bcRpsXcoys4DT1KP8vpmRdrzwq93eCfFbgvjClD1
+        Oa6IbcTmksOcgCOT1SXyvCNWp6hfPztZRcTeoFTHjlqE6TXcGW5PzI1dRLwb3Aa2XHkargWHbiX43+Bj
+        UFbuztixUojngxdd58rI2J0iw6PTrvN+cELsWniOq/8VXNcOSyXPDht/LUxJ8Vp4XussY690dn1fUcBJ
+        4qlnTyyFfq/lijz3/Y7TsSnyHPPl4Jdb+WHJGlgU9PTz+FXeE6cma9DimZlQ/Snxf2PXShlQPLAL3AAe
+        Vq55X+b9fkKKdIk8t2L/wLpPKHvxMqiP4SGLh12ibtduHJW8Ez4Fjwb/M/if4i9Qrv1VMPB4D0W8zPH2
+        /ngHOAmdrI5tNb7PgyviDBiRx3agnp5/AQ9PikF+VnsHAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="btnEtatJournalier.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcJDzMkANUHeQAAAoVJREFU
-        WEe1lr1rFEEchi+JBk1E1CaaSiFFghAxNpai2GttiJjYWwQURIIIiaRQk1gYGwVBQcHSRls/42fjH6CC
-        ICh+Yun5vLPv7q1nbrNL5h54YGd+H3N3zM1srSr1er0Lj+ND/GX1PIFdTmsPLNCLD7AV97HX6fGh+c2w
-        TDE3nB4XGu/CP2GJYpQz7LJ40PRMaF+O0y6LB00Xk96luOKyeNB0JuldimmXxYOmB5PepTjgsnjQtAOX
-        QvtinmCHy+JC4x34Qau04D1ud3p7YIE+vI6/MUXP17DPae2HxXQq6myQPZ6OC43X4jl8ii8qqhrVrnG7
-        6lB8HlfLjNtVg8Ie/BparI5vWP2CokhXbiwm3LY8FD1PaqOw5LbloGAkqVuWt3gS92K/1fMpVKwVI26/
-        MiRfTWr+4TuewE6nKW+99FBjnZZj+AWbWXRaMSRuwB+hpIE24x7H9Y3nUKdeyju8hP3OGcbPmOcnblS8
-        EJJGQ3oDvQUNOjaEzY3zKDbk3EFsfoM6olghJB1LcjOmHAowHsDl3ow0N+C0AOOpEGlw1KHWkKQj9llI
-        T/iIGo86Pq5JeInajPKVJmDcOfoVVaPaFI3LHdkkrsNbqspxyLF7eBuzV3A94x3FPD6Mee5itfuCAu3o
-        s6oGbSDteM3pfN+KWvQyLvh5GyqmHH2BdCPPY/bPqQzF+lvNepjBnG7BlP/egpmbxTEP40DDSdQZkf4C
-        F/ECdqJ+AcUmnR4PmnbjTkxfQrQHsmtWz6g9IJSj3G6H40DDx+qe4zWGkxDfaCLHI5fFg6a6H7QZ82yy
-        ebT5drssLjTej5+0imn+AIrtc3p7YIEtqDcl3XzpB9DzNG52Wklqtb/ZlZEdR2NsHwAAAABJRU5ErkJg
-        gg==
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5ggfEyUiFzDSHQAAAs1JREFU
+        WEfVl02ITWEYxy8xpOzUpLHTsKAINSXlK5JZ0JSSEiks2CoLZSaNJkWKiJ2FBTJqUMrXgsY3O0okIlkQ
+        yke+Xr//+z7nnO6c995zr3s2fvWrc/7v8773ufd83HMqZeCcm4Q78SZ+wJ/4Gi/gJmyz0vJh8bX4Cevx
+        HBfblPJg0T34R58Ab1D73bgGV+Eh/IziB66zqa3DYpv9soFjOMHyAz5xboPtt+MVnzj3HbuU52BgNK7H
+        gQb9iOK4LeFhfzDErtciZW14w6fO3cdRNpRB2OuHm0M/u//mCeznGhDsd6IOg1hqcQbhnTDmrqN+0nq+
+        R9Fv01PIog0IMl0V4qBFGYSPwpjbaFFNqHkXSt1Ki1LIkgYOW5RCpktVXLIog7CZBr6GUjffohSyE2HI
+        cwvn2JDGtvrUudsWZRDmGmC7C/tx5An4DUWPlaaQdeAp/K0CGLYhjfWFyA1ZlEEYa+BhiGpy1EpzMDYT
+        j2B6mNgeRtFnUQZhrIEe1Lc5PcJrKL5gh5XXhbpFfkZglsUZhM2cA2Pwsa8O1/d4G4rC+GR8qWIYtLga
+        BhpuQFC3AJNzQZfwDBuqgnwJvlIRvMUpNlQNA7FDMBV1y91Sw/OY8Asv427cjnvxHibow+fZ0nkYjDVw
+        N0QtoT+rMxj/5gkUxBrYhmpC9+96XkT9C+7DIdR5cRZ3YfTQ5KCwqXOgHqyxHHXNj7OoGIrLbOBJWMp1
+        W1QMxbFDoLuaHi6KXIbpXyzbJ1EPIp0WFUNxrAHdyxtlhU3zsD/WNhuDCbEGduBT1DNdPfUwmp7lbOvk
+        02233aJiKC7zHHgWlnKrLSqG4jIb0K8icv+WNaE4dggm4twGnGZTPOyX1sDVEBWiu91Cm1ZqA/tRbzpF
+        vsD0kmO7nAb+Fdb4vxvQ+0HsRGtGvZiKpho4F+aUymxbvhiKp+MDTF42W0Fvy/kHzxyVyl/GhhAMvk3h
+        CwAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="btnConducteurs.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -539,19 +529,14 @@
   <data name="Quitter.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcJDzMkANUHeQAAAoVJREFU
-        WEe1lr1rFEEchi+JBk1E1CaaSiFFghAxNpai2GttiJjYWwQURIIIiaRQk1gYGwVBQcHSRls/42fjH6CC
-        ICh+Yun5vLPv7q1nbrNL5h54YGd+H3N3zM1srSr1er0Lj+ND/GX1PIFdTmsPLNCLD7AV97HX6fGh+c2w
-        TDE3nB4XGu/CP2GJYpQz7LJ40PRMaF+O0y6LB00Xk96luOKyeNB0JuldimmXxYOmB5PepTjgsnjQtAOX
-        QvtinmCHy+JC4x34Qau04D1ud3p7YIE+vI6/MUXP17DPae2HxXQq6myQPZ6OC43X4jl8ii8qqhrVrnG7
-        6lB8HlfLjNtVg8Ie/BparI5vWP2CokhXbiwm3LY8FD1PaqOw5LbloGAkqVuWt3gS92K/1fMpVKwVI26/
-        MiRfTWr+4TuewE6nKW+99FBjnZZj+AWbWXRaMSRuwB+hpIE24x7H9Y3nUKdeyju8hP3OGcbPmOcnblS8
-        EJJGQ3oDvQUNOjaEzY3zKDbk3EFsfoM6olghJB1LcjOmHAowHsDl3ow0N+C0AOOpEGlw1KHWkKQj9llI
-        T/iIGo86Pq5JeInajPKVJmDcOfoVVaPaFI3LHdkkrsNbqspxyLF7eBuzV3A94x3FPD6Mee5itfuCAu3o
-        s6oGbSDteM3pfN+KWvQyLvh5GyqmHH2BdCPPY/bPqQzF+lvNepjBnG7BlP/egpmbxTEP40DDSdQZkf4C
-        F/ECdqJ+AcUmnR4PmnbjTkxfQrQHsmtWz6g9IJSj3G6H40DDx+qe4zWGkxDfaCLHI5fFg6a6H7QZ82yy
-        ebT5drssLjTej5+0imn+AIrtc3p7YIEtqDcl3XzpB9DzNG52Wklqtb/ZlZEdR2NsHwAAAABJRU5ErkJg
-        gg==
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5ggfEysJJQ8G0wAAAY5JREFU
+        WEftlz1Ow0AQRp2OC0APUhAS4iLQECQoqOEayT0SoAVRUcEtQgcFIqJBtPw1QcDyZj0Wu9hOiow3DU96
+        ij0b7TfJbmI7q8I518E3tOIDH/AINzSmHt40wKb4wh62NK4Mg8t4jOdGXuAdhvQ0Lh2E7mGxtJ84fTms
+        IfTAx+cMtJwOQlt47+OdG2k5LQTLnhDGWkoLwbIxPVpKC7mTG6DeRvkZdrRkCvPWN0BtDZ/8qHPPWjaF
+        easb4DwMF051yBTmLTfA8So++mrOJS7osCnMGzfAa7Jwgbl/G8AtfPVnOUPcx90Z3cElzYygHjXwnR82
+        wq1mRlBP1sCNZkZQjxrYxHAJrtFqCRY1M4L61E14hWk2YQHHyZpg3nIDAud//4jOdMgU5q1uQKAWNvGi
+        ZVOYt74BgbpcjOTGNP3FKAXk/jcwv1syQud7U0roYZ7t6Wu5eQiTTy7h75IM8mCyrsMxDKzgCcpmsVDW
+        vPjaC7oaV4bBJh9O5ZN3ceLD6TaGV8hZGeMI+xh87Vn2AyzNocICV5s5AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="btnEtatRecap.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
