--- a/ParcAuto/Form1.resx
+++ b/ParcAuto/Form1.resx
@@ -121,6 +121,63 @@
     <value>False</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnNonFixe.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5ggfEzEqN0WNegAAARNJREFU
+        OE+1k0tOwzAQQLOETTkCghVlDwjRwwCH4HcTQIBUKPehH7bAIWAH5r16rKZpsoMnPcmZeMb2xKn+hZTS
+        Ll7iQ+i4H6+7YdIGPuMPNjE2wl5MX4YXJk9QPvEaj8ObiMkYV4sQdGWZ4iau41HoeAtnKI+RliHgmd2i
+        q5h8gB9YeMd9tMgXOnfREx6uUNy2q9WTCxZZw9v5U0oXkT4vcJ9j6QQHediKxznNw3QX6SsFnNTFIbYW
+        aB7B7TZ5w84j9LE00UbZsHoRk/dwG23iN+5EeoaAl0T8VBZxtfIZHZv8ijKMtAUEe+glEVdxq/ZEHRuT
+        F+y8jRZ5wrar7LaH2J5ch0n25BzLz3SGy2f+G6rqF0Q3UpuMiUWjAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnFixe.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5ggfEzEqN0WNegAAARNJREFU
+        OE+1k0tOwzAQQLOETTkCghVlDwjRwwCH4HcTQIBUKPehH7bAIWAH5r16rKZpsoMnPcmZeMb2xKn+hZTS
+        Ll7iQ+i4H6+7YdIGPuMPNjE2wl5MX4YXJk9QPvEaj8ObiMkYV4sQdGWZ4iau41HoeAtnKI+RliHgmd2i
+        q5h8gB9YeMd9tMgXOnfREx6uUNy2q9WTCxZZw9v5U0oXkT4vcJ9j6QQHediKxznNw3QX6SsFnNTFIbYW
+        aB7B7TZ5w84j9LE00UbZsHoRk/dwG23iN+5EeoaAl0T8VBZxtfIZHZv8ijKMtAUEe+glEVdxq/ZEHRuT
+        F+y8jRZ5wrar7LaH2J5ch0n25BzLz3SGy2f+G6rqF0Q3UpuMiUWjAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="arrowMaintenanceUp.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcbCCo6noUakwAAAJ1JREFU
+        OE/dkEEOgjAQRcstDFwDL0Y8BGFDWOjRTMQNN6nv05mksQJu9SWPlJn5E0r4Y2KMFV6ws9L3WHhCZ8TK
+        2vtoEPOwc7xEA5iHHzin48pooyU038MKNnjCuwpG+SUqYBG2tvrbS3TAzbBD7fMSHsP6mtCda8sU0NOV
+        8n/Sq7ik837YYUZLngrAokKLVzwMO8xqyQ3PVvpdQngBu640bEHI9b8AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="ArrowMaintenancedown.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcbCCkyu3PBYgAAAJ9JREFU
+        OE/dkN0JwkAQhM9CFOzCxrQAQfMixAKClamQSs5vdm/hFJILvukHA3c7M5uf9AfknHfohjZl1ERZNKir
+        y4jEEzWXKIMeKsCowdHPxuwSeSjKogvj5HdDb7Q1o4LZGt0VKPTFchhMLuE8Xw4wzu4btgQtKwcELp4z
+        9E/qb76iVYlOQ6iz+Ds9apcDwvWSZU/+hNIeHb4q/wopvQDfGBzKWzg4OgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnMaintenance.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gkFCTIvf3eS2wAAAmVJREFU
+        WEfVlz1sTWEYx29KRDQiYjAYDBqhnWqqj5h0EJ0anZRqa7CIBIkwtGKihiYGiSAx1CJhknQQCzERgxgN
+        ROojooMQiZbr97zvv+eec+97nLd6HPFLfmnf5+s8t733nntr/w31en07HsUxPIa9uFzpvwcX6cYXGGIG
+        96m0fBjehV/tSr/hB/appVwY/Nhdoph3uFJt5cDAbW50PINqLQcGnvVzo5lSazkw8JafG80ztZYDAx/5
+        udHMqjWBWA+e0NHBeT8O6NgKya14AT/hYrmEPZrThk/wthssOI+jzV6nUBYSHXh6CXZrzhE0QgsYkwqF
+        oaAd9yzC9Wq13tX4Fo28BeawS+FWSK5SUSydarXeCR9yvMf7KV/iAtNqCUPBQ19XyGu1ODjbEy1m+XG1
+        hKHAbj4xXFZLArGiJc6pNB+K7N/wwZXn8x03qSUD8QEMLXFRJcVQfMj35DKh0iDkz/iyhCtKxUPTdd/b
+        gj1HVqgsCPnmBzCqVDw02ZvKefxmE8BuwTexXSW5UDNkDSlGlIqHppO4F9fiTtyAnTiJbSoLQv7PF6B4
+        M95wbf6DyQ7FN+IbC8I93OUaApA77KoaDCuVhYQ9olN4F58rNohpPuNTbH5luCciP+/gNNq73W7FhjFN
+        7gLpu99HxZoXyGNhgQf+6PiJ1j/iTg2GrDYDwTWYfr2WsYBhT9pr/teE4AL9PpdQ1gIhDlptBoJXfS6h
+        8gVe+VyC/f9m8Ys7FWN/aquPuQFlP7wS2OLjlXFAl/YQOO7jlTGmS3sI2Ou2Suax8XWOg33ZtA+hVWp3
+        yGVa4V9Sq/0CD/Os6+hwEKsAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="btnNbCourriers.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
